[package]
name = "safe_harbor"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safe_harbor"

[features]
no-entrypoint = []
no-log-ix-name = []
anchor-debug = []
cpi = []
custom-heap = []
custom-panic = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }