[package]
name = "safe_harbour"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safe_harbour"

[features]
no-entrypoint = []
no-log-ix-name = []
anchor-debug = []
cpi = []
custom-heap = []
custom-panic = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-program = "2.3.0"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
solana-program = "2.3.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
